// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot, state derived from props, DISCONNECTED 1`] = `
<div
  className="sc-TOsTZ sc-kgAjT jXvnts"
>
  <div
    className="sc-caSCKo spot-tile sc-ksYbfQ fTuKZY"
    data-qa="spot-tile__tile"
    data-qa-id="currency-pair-eurusd"
  >
    <div
      className="sc-cJSrbW dLwzxs"
    >
      <div
        className="sc-uJMKN gwebEf"
      >
        <div
          className="sc-cHGsZl hGuQbs"
        >
          <div
            className="sc-fAjcbJ evThIr"
            data-qa="tile-header__tile-symbol"
          >
            EUR/USD
          </div>
          <div
            className="sc-eqIVtm hDSCTn"
            data-qa="tile-header__delivery-date"
          >
            SPT (07 APR)
          </div>
        </div>
      </div>
      <div
        className="sc-hzDkRC jvKgXQ"
      >
        <button
          className="sc-fjdhpX fPHpaS"
          data-qa="price-button__trade-button"
          data-qa-id="direction-sell-eurusd"
          direction="Sell"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="sc-kGXeez gvcEng"
            disabled={true}
          >
            <div
              className="sc-kpOJdX cqyumn"
            >
              <div
                className="sc-jzJRlG sc-cSHVUG cGeTpq"
              >
                SELL
              </div>
              <div
                className="sc-jzJRlG sc-kAzzGY hdGsZZ"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="sc-jzJRlG sc-chPdSV bWuNMq"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="sc-jzJRlG sc-kgoBCf iTofxa"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
        <div
          className="sc-eNQAEJ fvUtyR"
        >
          <i
            aria-hidden="true"
            className="fas fa-caret-up sc-ckVGcZ flQtgB"
            color="green"
            data-qa="price-movement__movement-icon--up"
          />
          <div
            className="sc-jKJlTe jEFEqm"
            data-qa="price-movement__movement-value"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="fas fa-caret-down sc-ckVGcZ krpxqP"
            color="red"
            data-qa="price-movement__movement-icon--down"
          />
        </div>
        <button
          className="sc-fjdhpX fPHpaS"
          data-qa="price-button__trade-button"
          data-qa-id="direction-buy-eurusd"
          direction="Buy"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="sc-kGXeez gvcEng"
            disabled={true}
          >
            <div
              className="sc-kpOJdX cqyumn"
            >
              <div
                className="sc-jzJRlG sc-cSHVUG cGeTpq"
              >
                BUY
              </div>
              <div
                className="sc-jzJRlG sc-kAzzGY hdGsZZ"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="sc-jzJRlG sc-chPdSV bWuNMq"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="sc-jzJRlG sc-kgoBCf iTofxa"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      className="sc-cJSrbW dLwzxs"
    >
      <div
        className="sc-hmzhuo kFqPZU"
      >
        <div
          className="sc-gqjmRU laADnR"
        >
          <span
            className="sc-iwsKbI cKZqJX"
            data-qa="notional-input__currency-pair-symbol"
          >
            EUR
          </span>
          <input
            className="sc-VigVT jAppqb"
            data-qa-id="notional-input__input-eurusd"
            disabled={true}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="1,000,000"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot, state derived from props, RFQ canRequest 1`] = `
<div
  className="sc-TOsTZ sc-kgAjT jXvnts"
>
  <div
    className="sc-caSCKo spot-tile sc-ksYbfQ fTuKZY"
    data-qa="spot-tile__tile"
    data-qa-id="currency-pair-eurusd"
  >
    <div
      className="sc-cJSrbW dLwzxs"
    >
      <div
        className="sc-uJMKN gwebEf"
      >
        <div
          className="sc-cHGsZl hGuQbs"
        >
          <div
            className="sc-fAjcbJ evThIr"
            data-qa="tile-header__tile-symbol"
          >
            EUR/USD
          </div>
          <div
            className="sc-eqIVtm hDSCTn"
            data-qa="tile-header__delivery-date"
          >
            SPT (07 APR)
          </div>
        </div>
      </div>
      <div
        className="sc-hzDkRC jvKgXQ"
      >
        <div
          className="sc-jhAzac jfEQsr"
          data-qa="price-controls__price-button-disabled"
        >
          <i
            className="fas fa-ban fa-flip-horizontal sc-fBuWsC eWIQnG"
          />
          Streaming price unavailable
        </div>
        <div
          className="sc-eNQAEJ fvUtyR"
        >
          <i
            aria-hidden="true"
            className="fas fa-caret-up sc-ckVGcZ flQtgB"
            color="green"
            data-qa="price-movement__movement-icon--up"
          />
          <div
            className="sc-jKJlTe jEFEqm"
            data-qa="price-movement__movement-value"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="fas fa-caret-down sc-ckVGcZ krpxqP"
            color="red"
            data-qa="price-movement__movement-icon--down"
          />
        </div>
        <div
          className="sc-jhAzac jfEQsr"
          data-qa="price-controls__price-button-disabled"
        >
          <i
            className="fas fa-ban fa-flip-horizontal sc-fBuWsC eWIQnG"
          />
          Streaming price unavailable
        </div>
      </div>
    </div>
    <div
      className="sc-cJSrbW dLwzxs"
    >
      <div
        className="sc-hmzhuo kFqPZU"
      >
        <div
          className="sc-gqjmRU laADnR"
        >
          <span
            className="sc-iwsKbI cKZqJX"
            data-qa="notional-input__currency-pair-symbol"
          >
            EUR
          </span>
          <input
            className="sc-VigVT bfziLl"
            data-qa-id="notional-input__input-eurusd"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="1,000,000"
          />
          <button
            className="sc-jTzLTM pDZng"
            data-qa="notional-input__reset-input-value"
            onClick={[Function]}
          >
            <i
              className="fas fa-redo fa-flip-horizontal"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot, state derived from props, RFQ expired 1`] = `
<div
  className="sc-TOsTZ sc-kgAjT jXvnts"
>
  <div
    className="sc-caSCKo spot-tile sc-ksYbfQ fTuKZY"
    data-qa="spot-tile__tile"
    data-qa-id="currency-pair-eurusd"
  >
    <div
      className="sc-cJSrbW dLwzxs"
    >
      <div
        className="sc-uJMKN gwebEf"
      >
        <div
          className="sc-cHGsZl hGuQbs"
        >
          <div
            className="sc-fAjcbJ evThIr"
            data-qa="tile-header__tile-symbol"
          >
            EUR/USD
          </div>
          <div
            className="sc-eqIVtm hDSCTn"
            data-qa="tile-header__delivery-date"
          >
            SPT (07 APR)
          </div>
        </div>
      </div>
      <div
        className="sc-hzDkRC jvKgXQ"
      >
        <button
          className="sc-fjdhpX fPHpaS"
          data-qa="price-button__trade-button"
          data-qa-id="direction-sell-eurusd"
          direction="Sell"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="sc-kGXeez gvcEng"
            disabled={true}
          >
            <div
              className="sc-kpOJdX cqyumn"
            >
              <div
                className="sc-jzJRlG sc-cSHVUG cGeTpq"
              >
                SELL
              </div>
              <div
                className="sc-jzJRlG sc-kAzzGY hdGsZZ"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="sc-jzJRlG sc-chPdSV bWuNMq"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="sc-jzJRlG sc-kgoBCf iTofxa"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
          <div
            className="sc-dxgOiQ hYJNdP"
            data-qa="price-button__expired"
          >
            Expired
          </div>
        </button>
        <div
          className="sc-eNQAEJ fvUtyR"
        >
          <i
            aria-hidden="true"
            className="fas fa-caret-up sc-ckVGcZ flQtgB"
            color="green"
            data-qa="price-movement__movement-icon--up"
          />
          <div
            className="sc-jKJlTe jEFEqm"
            data-qa="price-movement__movement-value"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="fas fa-caret-down sc-ckVGcZ krpxqP"
            color="red"
            data-qa="price-movement__movement-icon--down"
          />
        </div>
        <button
          className="sc-fjdhpX fPHpaS"
          data-qa="price-button__trade-button"
          data-qa-id="direction-buy-eurusd"
          direction="Buy"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="sc-kGXeez gvcEng"
            disabled={true}
          >
            <div
              className="sc-kpOJdX cqyumn"
            >
              <div
                className="sc-jzJRlG sc-cSHVUG cGeTpq"
              >
                BUY
              </div>
              <div
                className="sc-jzJRlG sc-kAzzGY hdGsZZ"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="sc-jzJRlG sc-chPdSV bWuNMq"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="sc-jzJRlG sc-kgoBCf iTofxa"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
          <div
            className="sc-dxgOiQ hYJNdP"
            data-qa="price-button__expired"
          >
            Expired
          </div>
        </button>
      </div>
    </div>
    <div
      className="sc-cJSrbW dLwzxs"
    >
      <div
        className="sc-hmzhuo kFqPZU"
      >
        <div
          className="sc-gqjmRU laADnR"
        >
          <span
            className="sc-iwsKbI cKZqJX"
            data-qa="notional-input__currency-pair-symbol"
          >
            EUR
          </span>
          <input
            className="sc-VigVT bfziLl"
            data-qa-id="notional-input__input-eurusd"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="1,000,000"
          />
          <button
            className="sc-jTzLTM pDZng"
            data-qa="notional-input__reset-input-value"
            onClick={[Function]}
          >
            <i
              className="fas fa-redo fa-flip-horizontal"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot, state derived from props, RFQ received 1`] = `
<div
  className="sc-TOsTZ sc-kgAjT jXvnts"
>
  <div
    className="sc-caSCKo spot-tile sc-ksYbfQ fTuKZY"
    data-qa="spot-tile__tile"
    data-qa-id="currency-pair-eurusd"
  >
    <div
      className="sc-cJSrbW dLwzxs"
    >
      <div
        className="sc-uJMKN gwebEf"
      >
        <div
          className="sc-cHGsZl hGuQbs"
        >
          <div
            className="sc-fAjcbJ evThIr"
            data-qa="tile-header__tile-symbol"
          >
            EUR/USD
          </div>
          <div
            className="sc-eqIVtm hDSCTn"
            data-qa="tile-header__delivery-date"
          >
            SPT (07 APR)
          </div>
        </div>
      </div>
      <div
        className="sc-hzDkRC jvKgXQ"
      >
        <button
          className="sc-fjdhpX bTWxKI"
          data-qa="price-button__trade-button"
          data-qa-id="direction-sell-eurusd"
          direction="Sell"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="sc-kGXeez iswwZI"
            disabled={false}
          >
            <div
              className="sc-kpOJdX cqyumn"
            >
              <div
                className="sc-jzJRlG sc-cSHVUG cGeTpq"
              >
                SELL
              </div>
              <div
                className="sc-jzJRlG sc-kAzzGY hdGsZZ"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="sc-jzJRlG sc-chPdSV bWuNMq"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="sc-jzJRlG sc-kgoBCf iTofxa"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
        <div
          className="sc-eNQAEJ fvUtyR"
        >
          <i
            aria-hidden="true"
            className="fas fa-caret-up sc-ckVGcZ flQtgB"
            color="green"
            data-qa="price-movement__movement-icon--up"
          />
          <div
            className="sc-jKJlTe jEFEqm"
            data-qa="price-movement__movement-value"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="fas fa-caret-down sc-ckVGcZ krpxqP"
            color="red"
            data-qa="price-movement__movement-icon--down"
          />
        </div>
        <button
          className="sc-fjdhpX grTxlS"
          data-qa="price-button__trade-button"
          data-qa-id="direction-buy-eurusd"
          direction="Buy"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="sc-kGXeez iswwZI"
            disabled={false}
          >
            <div
              className="sc-kpOJdX cqyumn"
            >
              <div
                className="sc-jzJRlG sc-cSHVUG cGeTpq"
              >
                BUY
              </div>
              <div
                className="sc-jzJRlG sc-kAzzGY hdGsZZ"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="sc-jzJRlG sc-chPdSV bWuNMq"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="sc-jzJRlG sc-kgoBCf iTofxa"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      className="sc-cJSrbW dLwzxs"
    >
      <div
        className="sc-hmzhuo kFqPZU"
      >
        <div
          className="sc-gqjmRU laADnR"
        >
          <span
            className="sc-iwsKbI cKZqJX"
            data-qa="notional-input__currency-pair-symbol"
          >
            EUR
          </span>
          <input
            className="sc-VigVT jAppqb"
            data-qa-id="notional-input__input-eurusd"
            disabled={true}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="1,000,000"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot, state derived from props, RFQ requested 1`] = `
<div
  className="sc-TOsTZ sc-kgAjT jXvnts"
>
  <div
    className="sc-caSCKo spot-tile sc-ksYbfQ fTuKZY"
    data-qa="spot-tile__tile"
    data-qa-id="currency-pair-eurusd"
  >
    <div
      className="sc-cJSrbW dLwzxs"
    >
      <div
        className="sc-uJMKN gwebEf"
      >
        <div
          className="sc-cHGsZl hGuQbs"
        >
          <div
            className="sc-fAjcbJ evThIr"
            data-qa="tile-header__tile-symbol"
          >
            EUR/USD
          </div>
          <div
            className="sc-eqIVtm hDSCTn"
            data-qa="tile-header__delivery-date"
          >
            SPT (07 APR)
          </div>
        </div>
      </div>
      <div
        className="sc-hzDkRC jvKgXQ"
      >
        <div
          className="sc-jhAzac jfEQsr"
          data-qa="price-controls__price-button-disabled--loading"
        >
          <div
            className="sc-fMiknA fkvcFF"
          >
            <svg
              data-qa="adaptive-loader__svg"
              height={14}
              width={14}
            >
              <rect
                className="sc-brqgnP ewiecN"
                height={10.5}
                order={0}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={0.25}
              />
              <rect
                className="sc-brqgnP jBrYTO"
                height={10.5}
                order={1}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={3.875}
              />
              <rect
                className="sc-brqgnP jNEGMJ"
                height={10.5}
                order={2}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={7.5}
              />
              <rect
                className="sc-brqgnP gfiZXF"
                height={10.5}
                order={3}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={11.125}
              />
            </svg>
          </div>
          Awaiting price
        </div>
        <div
          className="sc-eNQAEJ fvUtyR"
        >
          <i
            aria-hidden="true"
            className="fas fa-caret-up sc-ckVGcZ flQtgB"
            color="green"
            data-qa="price-movement__movement-icon--up"
          />
          <div
            className="sc-jKJlTe jEFEqm"
            data-qa="price-movement__movement-value"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="fas fa-caret-down sc-ckVGcZ krpxqP"
            color="red"
            data-qa="price-movement__movement-icon--down"
          />
        </div>
        <div
          className="sc-jhAzac jfEQsr"
          data-qa="price-controls__price-button-disabled--loading"
        >
          <div
            className="sc-fMiknA fkvcFF"
          >
            <svg
              data-qa="adaptive-loader__svg"
              height={14}
              width={14}
            >
              <rect
                className="sc-brqgnP ewiecN"
                height={10.5}
                order={0}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={0.25}
              />
              <rect
                className="sc-brqgnP jBrYTO"
                height={10.5}
                order={1}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={3.875}
              />
              <rect
                className="sc-brqgnP jNEGMJ"
                height={10.5}
                order={2}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={7.5}
              />
              <rect
                className="sc-brqgnP gfiZXF"
                height={10.5}
                order={3}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={11.125}
              />
            </svg>
          </div>
          Awaiting price
        </div>
      </div>
    </div>
    <div
      className="sc-cJSrbW dLwzxs"
    >
      <div
        className="sc-hmzhuo kFqPZU"
      >
        <div
          className="sc-gqjmRU laADnR"
        >
          <span
            className="sc-iwsKbI cKZqJX"
            data-qa="notional-input__currency-pair-symbol"
          >
            EUR
          </span>
          <input
            className="sc-VigVT jAppqb"
            data-qa-id="notional-input__input-eurusd"
            disabled={true}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="1,000,000"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot, state derived from props, defaults, RFQ none, should be able to excute 1`] = `
<div
  className="sc-TOsTZ sc-kgAjT jXvnts"
>
  <div
    className="sc-caSCKo spot-tile sc-ksYbfQ fTuKZY"
    data-qa="spot-tile__tile"
    data-qa-id="currency-pair-eurusd"
  >
    <div
      className="sc-cJSrbW dLwzxs"
    >
      <div
        className="sc-uJMKN gwebEf"
      >
        <div
          className="sc-cHGsZl hGuQbs"
        >
          <div
            className="sc-fAjcbJ evThIr"
            data-qa="tile-header__tile-symbol"
          >
            EUR/USD
          </div>
          <div
            className="sc-eqIVtm hDSCTn"
            data-qa="tile-header__delivery-date"
          >
            SPT (07 APR)
          </div>
        </div>
      </div>
      <div
        className="sc-hzDkRC jvKgXQ"
      >
        <button
          className="sc-fjdhpX bKwXzI"
          data-qa="price-button__trade-button"
          data-qa-id="direction-sell-eurusd"
          direction="Sell"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="sc-kGXeez iswwZI"
            disabled={false}
          >
            <div
              className="sc-kpOJdX cqyumn"
            >
              <div
                className="sc-jzJRlG sc-cSHVUG cGeTpq"
              >
                SELL
              </div>
              <div
                className="sc-jzJRlG sc-kAzzGY hdGsZZ"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="sc-jzJRlG sc-chPdSV bWuNMq"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="sc-jzJRlG sc-kgoBCf iTofxa"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
        <div
          className="sc-eNQAEJ fvUtyR"
        >
          <i
            aria-hidden="true"
            className="fas fa-caret-up sc-ckVGcZ flQtgB"
            color="green"
            data-qa="price-movement__movement-icon--up"
          />
          <div
            className="sc-jKJlTe jEFEqm"
            data-qa="price-movement__movement-value"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="fas fa-caret-down sc-ckVGcZ krpxqP"
            color="red"
            data-qa="price-movement__movement-icon--down"
          />
        </div>
        <button
          className="sc-fjdhpX covZGR"
          data-qa="price-button__trade-button"
          data-qa-id="direction-buy-eurusd"
          direction="Buy"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="sc-kGXeez iswwZI"
            disabled={false}
          >
            <div
              className="sc-kpOJdX cqyumn"
            >
              <div
                className="sc-jzJRlG sc-cSHVUG cGeTpq"
              >
                BUY
              </div>
              <div
                className="sc-jzJRlG sc-kAzzGY hdGsZZ"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="sc-jzJRlG sc-chPdSV bWuNMq"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="sc-jzJRlG sc-kgoBCf iTofxa"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      className="sc-cJSrbW dLwzxs"
    >
      <div
        className="sc-hmzhuo kFqPZU"
      >
        <div
          className="sc-gqjmRU laADnR"
        >
          <span
            className="sc-iwsKbI cKZqJX"
            data-qa="notional-input__currency-pair-symbol"
          >
            EUR
          </span>
          <input
            className="sc-VigVT bfziLl"
            data-qa-id="notional-input__input-eurusd"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="1,000,000"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot, state derived from props, in trade 1`] = `
<div
  className="sc-TOsTZ sc-kgAjT jXvnts"
>
  <div
    className="sc-caSCKo spot-tile sc-ksYbfQ fTuKZY"
    data-qa="spot-tile__tile"
    data-qa-id="currency-pair-eurusd"
  >
    <div
      className="sc-cJSrbW dLwzxs"
    >
      <div
        className="sc-uJMKN gwebEf"
      >
        <div
          className="sc-cHGsZl hGuQbs"
        >
          <div
            className="sc-fAjcbJ evThIr"
            data-qa="tile-header__tile-symbol"
          >
            EUR/USD
          </div>
          <div
            className="sc-eqIVtm hDSCTn"
            data-qa="tile-header__delivery-date"
          >
            SPT (07 APR)
          </div>
        </div>
      </div>
      <div
        className="sc-hzDkRC jvKgXQ"
      >
        <button
          className="sc-fjdhpX fPHpaS"
          data-qa="price-button__trade-button"
          data-qa-id="direction-sell-eurusd"
          direction="Sell"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="sc-kGXeez gvcEng"
            disabled={true}
          >
            <div
              className="sc-kpOJdX cqyumn"
            >
              <div
                className="sc-jzJRlG sc-cSHVUG cGeTpq"
              >
                SELL
              </div>
              <div
                className="sc-jzJRlG sc-kAzzGY hdGsZZ"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="sc-jzJRlG sc-chPdSV bWuNMq"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="sc-jzJRlG sc-kgoBCf iTofxa"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
        <div
          className="sc-eNQAEJ fvUtyR"
        >
          <i
            aria-hidden="true"
            className="fas fa-caret-up sc-ckVGcZ flQtgB"
            color="green"
            data-qa="price-movement__movement-icon--up"
          />
          <div
            className="sc-jKJlTe jEFEqm"
            data-qa="price-movement__movement-value"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="fas fa-caret-down sc-ckVGcZ krpxqP"
            color="red"
            data-qa="price-movement__movement-icon--down"
          />
        </div>
        <button
          className="sc-fjdhpX fPHpaS"
          data-qa="price-button__trade-button"
          data-qa-id="direction-buy-eurusd"
          direction="Buy"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="sc-kGXeez gvcEng"
            disabled={true}
          >
            <div
              className="sc-kpOJdX cqyumn"
            >
              <div
                className="sc-jzJRlG sc-cSHVUG cGeTpq"
              >
                BUY
              </div>
              <div
                className="sc-jzJRlG sc-kAzzGY hdGsZZ"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="sc-jzJRlG sc-chPdSV bWuNMq"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="sc-jzJRlG sc-kgoBCf iTofxa"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      className="sc-cJSrbW dLwzxs"
    >
      <div
        className="sc-hmzhuo kFqPZU"
      >
        <div
          className="sc-gqjmRU laADnR"
        >
          <span
            className="sc-iwsKbI cKZqJX"
            data-qa="notional-input__currency-pair-symbol"
          >
            EUR
          </span>
          <input
            className="sc-VigVT jAppqb"
            data-qa-id="notional-input__input-eurusd"
            disabled={true}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="1,000,000"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
